# zing-register

./: .gitignore  .prettierrc  README.MD  config.json  eslint.config.js  forge.config.ts  index.html  main.py  main.spec  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test-vlcm.ts  tsconfig.json  vite.main.config.mts  vite.renderer.config.mts
.github/: README.MD
rektCaptcha/: background.js  manifest.json  popup.css  popup.html  popup.js  recaptcha-visibility.js  recaptcha.js  rules.json  setup.html  setup.js
rektCaptcha/_metadata/generated_indexed_rulesets/: _ruleset1
src/: app.tsx  electron.d.ts  main.ts  preload.ts  renderer.ts
src/assets/css/: index.css
src/components/: account-row.tsx  account-table.tsx  header.tsx  proxy-range.tsx  register-form.tsx
src/layout/: layout.tsx
src/module/: vlcm-thread.ts  zing-captcha-solver.ts
src/pages/: index.tsx  proxy-list.tsx
src/router/: path.ts
src/store/: index.ts
src/types/: account.ts
utils/: __init__.py  generate_password.py  generate_username.py  vlcm_thread.py  zing_captcha_solver.py
